# pointnet2_pytorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gt_cloud.pcd  predicted_cloud.pcd
data/: error.pcd  fp_pass.pcd  norm_train46.pcd  rand.pcd  sa_pass.pcd  train46.pcd
data/test/: norm_test0.pcd
data/train/: norm_train0.pcd  norm_train1.pcd
include/: test.cpp
include/pointnet2_pytorch/: cost_regression_utils.hpp  pointnet2_core.cpp  pointnet2_core.hpp  pointnet2_sem_seg.hpp  pointnet2_utils copy.hpp  pointnet2_utils.hpp  poss_dataset.hpp  uneven_ground_dataset.hpp
log/: best_loss_model.pt  best_optim_model.pt
safe_weights/: best_loss_model.pt  best_optim_model.pt
scripts/: denormalize_cloud.py  norm_pc.py  normalize_cloud.py  partitionate_cloud.py  vis_pcd.py  visualize_cloud.py  visualize_cloud_normals.py
src/: cost_regression_utils.cpp  cuda_test.cu  inference_pointnet2_sem_seg.cpp  pointnet2_core.cpp  pointnet2_sem_seg.cpp  pointnet2_utils.cpp  poss_dataset.cpp  regress_costs.cpp  test_pcl.cpp  test_pointnet2_core.cpp  test_pointnet2_utils.cpp  test_torch_cpp.cpp  train_pointnet2_sem_seg.cpp  train_pointnet2_sem_seg_poss.cpp  uneven_ground_dataset.cpp
test/: test_openvdb.cpp  test_pointnet2_core.cpp  test_pointnet2_utils.cpp
weights_from_gl/: best_optim_model.pt
